# cfw

./: Cargo.toml
.cargo/: config
lib/firmware/: Cargo.toml
lib/firmware/src/: engine.rs  input.rs  lib.rs  primitive.rs  update.rs
lib/firmware/src/input/: acceleration.rs  button.rs  mod.rs  rotation.rs  stick.rs  touchpad.rs  trigger.rs
lib/lsm6ds33/: Cargo.toml
lib/lsm6ds33/src/: lib.rs
lib/tm035035/: Cargo.toml
lib/tm035035/src/: lib.rs
scripts/: teensy-load
src/: controller.rs  logging.rs  main.rs
src/driver/: glidepoint.rs  imu.rs  mod.rs  touch.rs
src/driver/imu/: config.rs
src/driver/imu/config/: ctrl1xl.rs  ctrl2g.rs  ctrl4c.rs
