[package]
name = "cfw"
version = "0.1.0"
authors = ["Alex Peters <alexander.n.peters@gmail.com>"]
edition = "2018"

[workspace]
members = ['./lib/lsm6ds33', './lib/tm035035']

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.4"
log = "0.4.14"
teensy4-panic = "0.1.0"

lsm6ds33 = { path = "./lib/lsm6ds33"}
tm035035 = { path = "./lib/tm035035"}

[dependencies.teensy4-bsp]
version = "0.2.0"
features = ["rt"]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
